--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -2208,6 +2208,7 @@ html.no-csstransitions .home-content__main {
 
 .s-about .section-header.has-bottom-sep::before {
     background-color: rgba(255, 255, 255, 0.25);
+    margin-left:100px;
 }
 
 .about-desc {
@@ -2215,6 +2216,7 @@ html.no-csstransitions .home-content__main {
     line-height: 1.75;
     text-align: center;
     max-width: 1024px;
+    margin-left:100px;
 }
 
 
